# nova-mlops-lab

./: .gitignore  README.md  pyproject.toml
.nova-mlops/state/: mnist-cnn.json  sentiment-demo.json
artifacts/mnist-cnn/: metrics.jsonl  model.pt  run.json
docs/: troubleshooting.md
jobs/: cloud_init.py  mnist.yaml
src/nova_mlops/: cli.py  run_id.py
src/nova_mlops/jobs/: models.py  scheduler.py  state_store.py
src/nova_mlops/openstack/: cloud_init.py  connection.py  jobs.py  nova.py  probe.py
src/nova_mlops/training/pytorch/: train.py
src/nova_mlops_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
